# 2024-ICT-PortService_Chatbot

./: .dockerignore  .gitignore  README.md  dockerfile  faiss_index.npy  main.py  pyproject.toml  requirements.txt  streamlit_app.py  vectors.db
.github/: auto_assign.yml
.github/ISSUE_TEMPLATE/: 이슈-템플릿.md
.github/workflows/: main.yml  pull_request_template.md
app/: main.py
app/api/v1/endpoints/: chat.py
app/core/: config.py
app/db/: __init__.py  connection.py  database.py  models.py
app/prompts/: port_authority_prompt.py
app/rdb/: __init__.py  api.py  crud.py  models.py  rdb.py  schemas.py
app/services/: document_loader.py  embedding.py  hwp_reader.py  vector_db.py  vector_store.py
langchain_env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
public/: index.html  script.js
