[tool.poetry]
name = "ict"
version = "0.1.0"
description = ""
authors = ["박준규 <junju404@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
openai = "^1.40.3"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"
faiss-cpu = "^1.8.0"
sentence-transformers = "^3.0.1"
python-multipart = "^0.0.9"
numpy = "<2.0"
langchain-openai = "^0.1.21"

[tool.poetry.dev-dependencies]
psutil = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"