[tool.poetry]
name = "ict"
version = "0.1.0"
description = ""
authors = ["박준규 <junju404@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
openai = "^1.40.3"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
python-dotenv = "1.0.0"
faiss-cpu = "^1.8.0"
sentence-transformers = {version = "^3.0.1", extras = ["cpu"]}
python-multipart = "^0.0.9"
langchain-teddynote = "^0.0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"